--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ web-build/
 
 # macOS
 .DS_Store
+
+yarn add @react-navigation/native
+npx expo install react-native-screens react-native-safe-area-context
+yarn add @react-navigation/native-stack
+
+yarn add native-base
+npx expo install react-native-svg@12.1.1
+npx expo install react-native-safe-area-context@3.3.2
+
+npm install firebase
