--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ npx expo install react-native-svg@12.1.1
 npx expo install react-native-safe-area-context@3.3.2
 
 npm install firebase
+https://www.youtube.com/watch?v=SMkR-iIGvwQ&list=PLQWFhX-gwJbmrCwksjn77tdl36dIWPFAt
+yarn add react-native-onboarding-swiper
