--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
+    "lottie-ios": "3.4.1",
+    "lottie-react-native": "5.1.4",
     "native-base": "^3.4.25",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0"
